--- a/src/components/Title/style.css
+++ b/src/components/Title/style.css
@@ -1,8 +1,9 @@
 .title {
   width: 100%;
   text-align: center;
+  font-family: 'Lobster', cursive;
   font-size: 3rem;
-  text-decoration: underline;
   color: #2A77AE;
-  margin-bottom: 50px;
+  margin-bottom: 0px;
+  background-color: black;
 }
