--- a/src/components/FriendCard/style.css
+++ b/src/components/FriendCard/style.css
@@ -7,6 +7,8 @@
   width: 280px;
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
   text-align: left;
+  margin-top: 1px;
+  margin-bottom: 10px;
 }
 
 .card > .img-container {
@@ -51,7 +53,7 @@
 }
 
 .title:hover {
-  transform: scale(1.1); /* Increase the size when hovered */
+  transform: scale(1.1); 
 }
 
 .popover {
