--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -1,9 +1,27 @@
+/* Styles for navbar-brand elements */
+.navbar-brand {
+  transform: scale(1); /* Initial scale */
+  transition: transform 0.3s ease; /* Smooth transition effect on transform property */
+}
 
-    .navbar-brand {
-    transform: scale(1);
-    transition: transform 0.3s ease;
-  }
-  
-  .navbar-brand:hover {
-    transform: scale(1.1); 
-  }
+/* Increase scale on hover */
+.navbar-brand:hover {
+  transform: scale(1.1); 
+  /* show the tooltip */
+  display: inline-block;
+  position: relative;
+  z-index: 1;
+  cursor: pointer;
+}
+
+/* Tooltip container */
+.tooltip {
+  position: fixed; /* Position fixed to keep it in the middle of the screen */
+}
+
+/* Styles for popover container */
+.popover {
+  width: 400px; /* Set the width of the popover container */
+  height: 250px; /* Set the height of the popover container */
+}
+    
