--- a/src/components/FriendCard/style.css
+++ b/src/components/FriendCard/style.css
@@ -1,7 +1,7 @@
 .card {
   background: #fff;
   border-radius: 2px;
-  height: 280px;
+  height: 260px;
   margin: 1rem;
   position: relative;
   width: 280px;
@@ -12,19 +12,24 @@
 }
 
 .card > .img-container {
-  height: 60%;
+  height: 300px;
   overflow: hidden;
   text-align: center;
   background:#6CADDC;
 }
 .card > .img-container > img {
-  width: 100%
+  width: 400px;
+
 }
 
 .card > .content {
   padding-left: 1rem;
   padding-right: 1rem;
-  font-size: 15px;
+  font-size: 35px;
+  font-family: 'Lobster', cursive;
+  font-weight: bold;
+  background-color:yellow;
+  
 }
 
 .card > .content > ul {
